--- a/01_Python_Grammar/0904TASK_01_Datatype_Variable_practice.ipynb
+++ b/01_Python_Grammar/0904TASK_01_Datatype_Variable_practice.ipynb
@@ -244,23 +244,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 37,
    "metadata": {
     "id": "oJ7ze-x6p49n"
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (372222767.py, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  Cell \u001b[1;32mIn[136], line 2\u001b[1;36m\u001b[0m\n\u001b[1;33m    result =\u001b[0m\n\u001b[1;37m             ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Life is too short\n"
      ]
     }
    ],
    "source": [
     "a = ['Life', 'is', 'too', 'short']\n",
-    "result = "
+    "result = ' '.join(a)\n",
+    "print(result)"
    ]
   },
   {
@@ -279,26 +279,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 44,
    "metadata": {
     "id": "eV0ZiH_-p49n"
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "can only concatenate tuple (not \"str\") to tuple",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[142], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m (\u001b[38;5;241m1\u001b[39m, \u001b[38;5;241m2\u001b[39m, \u001b[38;5;241m3\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m a \u001b[38;5;241m+\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m4\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
-      "\u001b[1;31mTypeError\u001b[0m: can only concatenate tuple (not \"str\") to tuple"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(1, 2, 3, 4)\n"
      ]
     }
    ],
    "source": [
     "a = (1, 2, 3)\n",
-    "a + \"4\""
+    "b = (4,)\n",
+    "print(a + b)"
    ]
   },
   {
@@ -322,26 +319,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 49,
    "metadata": {
     "id": "lccjjP_up49o"
    },
    "outputs": [
     {
      "ename": "TypeError",
-     "evalue": "list indices must be integers or slices, not tuple",
+     "evalue": "'tuple' object does not support item assignment",
      "output_type": "error",
      "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[205], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m a[(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m,)] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpython\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      2\u001b[0m a\n",
-      "\u001b[1;31mTypeError\u001b[0m: list indices must be integers or slices, not tuple"
+      "\u001b[1;31m-----------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m     Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[49], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m a[(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124ma\u001b[39m\u001b[38;5;124m'\u001b[39m,)] \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpython\u001b[39m\u001b[38;5;124m'\u001b[39m\n\u001b[0;32m      2\u001b[0m \u001b[38;5;28mprint\u001b[39m(a)\n",
+      "\u001b[1;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
      ]
     }
    ],
    "source": [
-    "a[('a',)] = 'python'\n",
-    "a"
+    "a[('a',)] = 'python'"
    ]
   },
   {
@@ -361,27 +357,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 4,
    "metadata": {
     "id": "iU4C4JT-p49o"
    },
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'dict_values' object is not subscriptable",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[180], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m a \u001b[38;5;241m=\u001b[39m {\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mA\u001b[39m\u001b[38;5;124m'\u001b[39m: \u001b[38;5;241m90\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mB\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;241m80\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mC\u001b[39m\u001b[38;5;124m'\u001b[39m:\u001b[38;5;241m70\u001b[39m}\n\u001b[0;32m      2\u001b[0m result \u001b[38;5;241m=\u001b[39m a\u001b[38;5;241m.\u001b[39mvalues()\n\u001b[1;32m----> 3\u001b[0m \u001b[38;5;28mprint\u001b[39m(result[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mB\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
-      "\u001b[1;31mTypeError\u001b[0m: 'dict_values' object is not subscriptable"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "80\n"
      ]
     }
    ],
    "source": [
     "a = {'A': 90, 'B':80, 'C':70}\n",
-    "result = a.values()\n",
-    "print(result[\"B\"])"
+    "result = a['B']\n",
+    "print(result)"
    ]
   },
   {
@@ -401,26 +393,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 198,
+   "execution_count": 52,
    "metadata": {
     "id": "md_gELw4p49o"
    },
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[1, 1, 2, 2, 3, 3, 3, 4, 4, 5]"
-      ]
-     },
-     "execution_count": 198,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3, 4, 5}\n"
+     ]
     }
    ],
    "source": [
     "a = [1, 1, 1, 2, 2, 3, 3, 3, 4, 4, 5]\n",
-    "a.remove(1)\n",
-    "a"
+    "aSet = set(a)\n",
+    "b = aSet\n",
+    "print(b)"
    ]
   },
   {
@@ -458,7 +448,7 @@
     }
    ],
    "source": [
-    "a = b = [1, 2, 3] #WHY???\n",
+    "a = b = [1, 2, 3] #WHY??? a and b present same value of list. \n",
     "a[1] =4\n",
     "b"
    ]
