--- a/01_Python_Grammar/0904 TIL_task.ipynb
+++ b/01_Python_Grammar/0904 TIL_task.ipynb
@@ -1658,9 +1658,783 @@
    "source": []
   },
   {
+   "cell_type": "markdown",
+   "id": "ab16ecb0-532b-49db-b1f4-368916434514",
+   "metadata": {},
+   "source": [
+    "#### 101 파이썬에서 True 혹은 False를 갖는 데이터 타입은 무엇인가?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "a8f98bf2-ddc4-4f31-8c83-a43010553d94",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#BOOL"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "caf6ddd9-b65b-41c5-8fac-11443523c0a8",
+   "metadata": {},
+   "source": [
+    "#### 102 아래 코드의 출력 결과를 예상하라"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "05e24bd6-23f0-4e9b-bd8b-9836cab62a5c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(3 == 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ff076067-03ad-40d5-8bba-49feadb1358d",
+   "metadata": {},
+   "source": [
+    "#### 103 아래 코드의 출력 결과를 예상하라"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "ec9ee0d9-d465-4cbc-a68d-a7ec7041164d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(3 < 5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "0d0341bd-22dd-4dad-b106-c78f3aa65ecc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 6\n",
+    "print(1 < x < 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9ddea006-de1c-4d97-a544-4d7c651f428f",
+   "metadata": {},
+   "source": [
+    "#### 104"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6db3b65-fd5a-4779-a35f-9b43b762a382",
+   "id": "c53b6604-0679-4a34-b8c4-25e842f50564",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "x = 4\n",
+    "print(1 < x < 5)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aae0c1ce-5693-44ae-b1ee-1899b7490a1e",
+   "metadata": {},
+   "source": [
+    "#### 105"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "bde399dd-8455-4f92-89a5-c94d18db773d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "print ((3 == 3) and (4 != 3)) #TRUE WHY??? "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "af8462de-c98e-4491-8703-1cbf7d4bf72d",
+   "metadata": {},
+   "source": [
+    "#### 106"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "723bb20e-f4a5-490e-a186-c7fb892347b5",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "expression cannot contain assignment, perhaps you meant \"==\"? (2637246330.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[31], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    print(3 => 4) # 연산자가 없다!@!!ㅋㅋㅋㅋㅋㅋ\u001b[0m\n\u001b[1;37m          ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m expression cannot contain assignment, perhaps you meant \"==\"?\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(3 => 4) # 연산자가 없다!@!!ㅋㅋㅋㅋㅋㅋ"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e59bb1de-5e89-4d1a-b5ba-e4f05f09d51c",
+   "metadata": {},
+   "source": [
+    "#### 107"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "6bcc1a08-1b93-4118-9ff4-28574ea656d1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if 4 < 3:\n",
+    "    print(\"Hello World\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a6b94e2d-ee6b-40c3-ae98-35535eadd014",
+   "metadata": {},
+   "source": [
+    "#### 108"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "a98338e4-0a38-44b5-924a-ae91bb96842a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi, there.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 결과??? Hi, there???\n",
+    "if 4 < 3:\n",
+    "    print(\"Hello World.\")\n",
+    "else:\n",
+    "    print(\"Hi, there.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cd9cadc5-0f2c-40dc-9428-8f2e1a93d43c",
+   "metadata": {},
+   "source": [
+    "#### 109"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "id": "cf5a4505-bc8d-45dd-95ad-acf7bffbded0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# why??? \n",
+    "if True :\n",
+    "    print (\"1\")\n",
+    "    print (\"2\")\n",
+    "else :\n",
+    "    print(\"3\")\n",
+    "print(\"4\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "deee5d24-6e16-43b2-9f1e-e8534268ce11",
+   "metadata": {},
+   "source": [
+    "#### 110"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "a1232d00-db5f-4b86-b156-b068cb2a4bc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# true안의 false\n",
+    "if True :\n",
+    "    if False:\n",
+    "        print(\"1\")\n",
+    "        print(\"2\")\n",
+    "    else:\n",
+    "        print(\"3\")\n",
+    "else :\n",
+    "    print(\"4\")\n",
+    "print(\"5\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9944d962-626d-462b-a00e-67ce9e79a761",
+   "metadata": {},
+   "source": [
+    "#### 111"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "4be55176-caf8-424b-920f-e7ecd9267e35",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "입력: 안녕하세요\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'안녕하세요안녕하세요'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a = input(\"입력:\")\n",
+    "a *2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9557dc9d-ba32-42dc-b67d-14ebd73c1a97",
+   "metadata": {},
+   "source": [
+    "#### 112"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "id": "532e2420-e4c7-4f91-8014-037d694b8d93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "insert number: 50\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(\"insert number:\"))\n",
+    "print(a +10)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "36ff4e38-a118-49d8-98e2-e1cf00484fba",
+   "metadata": {},
+   "source": [
+    "### 113"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 85,
+   "id": "46c923c7-37fa-4443-ae5e-bc8afc398a54",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "insert number: 5\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " 5 is odd number\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "user = int(input(\"insert number:\"))\n",
+    "if user %2 == 0:\n",
+    "    print(f' {user} is even number')\n",
+    "else : \n",
+    "    print(f' {user} is odd number')\n",
+    "print(user)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e239a89a-b773-4037-b93c-acc3df42ea60",
+   "metadata": {},
+   "source": [
+    "### 114"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "80808617-99b5-4b4f-967d-c8ef4e7703b7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " 50\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n"
+     ]
+    }
+   ],
+   "source": [
+    "user = int(input())\n",
+    "print(user + 10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "id": "2f897fab-9478-42cd-9ae2-00c1093a8aa5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "입력값:  210\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "230\n"
+     ]
+    }
+   ],
+   "source": [
+    "user = input(\"입력값: \")\n",
+    "num = 20 + int(user)\n",
+    "if num > 255:\n",
+    "    print(255)\n",
+    "else:\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac4a6214-e4c4-42d5-a9cf-4d1e30966f3e",
+   "metadata": {},
+   "source": [
+    "### 115"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 150,
+   "id": "7d83e70d-28f8-4942-8303-e9069eb5233c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "input:  15\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "-5\n"
+     ]
+    }
+   ],
+   "source": [
+    "user = input(\"input: \")\n",
+    "num = int(user) - 20\n",
+    "if num < 0:\n",
+    "    print(0)\n",
+    "if num > 255:\n",
+    "    print(255)\n",
+    "else:\n",
+    "    print(num)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a178027b-6de0-4b17-9f05-6033692d7222",
+   "metadata": {},
+   "source": [
+    "### 116 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "id": "e5029c6d-51b1-4f5e-b18a-9cf6f48bb4fb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "Time:  10:00\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "on time.\n"
+     ]
+    }
+   ],
+   "source": [
+    "time = input(\"Time: \")\n",
+    "if time[-2: ] == \"00\":\n",
+    "    print(\"on time.\")\n",
+    "else:\n",
+    "    print(\"not on time.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3cc8b3b4-8d80-495c-bfac-1a4b40197e07",
+   "metadata": {},
+   "source": [
+    "### 117"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
+   "id": "e4bcfb53-2ece-432b-a27d-59ba2f25b0a0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "What's your favorite fruit?:  홍시\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Right!\n"
+     ]
+    }
+   ],
+   "source": [
+    "char = input(\"What's your favorite fruit?: \")\n",
+    "fruit = [\"사과\", \"포도\", \"홍시\"]\n",
+    "if char in fruit:\n",
+    "    print(\"Right!\")\n",
+    "else:\n",
+    "    print(\"Hmmmm...\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "56f796ba-8b8f-404c-880b-a83556666942",
+   "metadata": {},
+   "source": [
+    "### 119"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 190,
+   "id": "42b9f0f6-f621-4087-9ac1-28eaf777b5e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "my favorite season is..:  summer\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wow! so do I!\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruit = {\"spring\" : \"strawberry\", \"summer\" : \"tomato\", \"autumn\" : \"apple\"}\n",
+    "answer = input(\"my favorite season is..: \")\n",
+    "if answer in fruit:\n",
+    "    print(\"Wow! so do I!\")\n",
+    "else:\n",
+    "    print(\"Oh! you do!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "89cf5766-7732-41f8-b73f-4449699f8e93",
+   "metadata": {},
+   "source": [
+    "### 120"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 195,
+   "id": "c03e9f66-7287-4216-993b-a53fdd9cafc0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "my favorite fruit is..:  pear\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Oh! you do!\n"
+     ]
+    }
+   ],
+   "source": [
+    "fruit = {\"spring\" : \"strawberry\", \"summer\" : \"tomato\", \"autumn\" : \"apple\"}\n",
+    "answer = input(\"my favorite fruit is..: \")\n",
+    "if answer in fruit:\n",
+    "    print(\"Wow! so do I!\")\n",
+    "else:\n",
+    "    print(\"Oh! you do!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0ae57337-0be4-4667-a3bf-ce9f09343687",
+   "metadata": {},
+   "source": [
+    "### 121"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 206,
+   "id": "cd8e7fa5-a3e4-4abc-bbd7-7ac1ffd1a01d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      " S\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "s\n"
+     ]
+    }
+   ],
+   "source": [
+    "user = input(\"\")\n",
+    "if user.islower():\n",
+    "    print(user.upper())\n",
+    "else:\n",
+    "    print(user.lower())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8b9f4b31-d21b-4cd9-83ff-a1b4ad515861",
+   "metadata": {},
+   "source": [
+    "### 122"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 212,
+   "id": "0c53f4c9-8679-4c55-8c78-da4a21a37f39",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "score:  99\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "grade is A\n"
+     ]
+    }
+   ],
+   "source": [
+    "score = int(input(\"score: \"))\n",
+    "if 81 <= score <= 100:\n",
+    "    print(\"grade is A\")\n",
+    "elif 61 <= score <= 80:\n",
+    "    print(\"grade is B\")\n",
+    "elif 41 <= score <= 60:\n",
+    "    print(\"grade is C\")\n",
+    "elif 21 <= score <= 40:\n",
+    "    print(\"grade is D\")\n",
+    "else:\n",
+    "    print(\"grade is E\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1e9988b8-c660-46aa-ae09-ed95baf767bb",
+   "metadata": {},
+   "source": [
+    "### 123"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ff8abc72-659a-4362-9305-20cad2612180",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31e0ce23-ae0c-4b31-9012-5bb2aa69f5ca",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a7d9458f-fb75-4a4b-8c5b-00debc158a0a",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4761e22c-0707-4334-b6eb-1518bc82a11c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5755573f-5a84-4c22-80be-d6bb175579f1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5c6b3bd-7504-4dd3-8efa-9c3c4b8d7011",
    "metadata": {},
    "outputs": [],
    "source": []
