--- a/01_Python_Grammar/02. Control_Statement.ipynb
+++ b/01_Python_Grammar/02. Control_Statement.ipynb
@@ -1972,7 +1972,7 @@
     }
    ],
    "source": [
-    "contact = {} #저장소 역할\n",
+    "contact = {} #저장소 역할 #초기화, 초기값 설정 (list, dict,문자열만들기)\n",
     "\n",
     "while True: \n",
     "    print('------------전화번호부 프로그램------------')\n",
@@ -2030,12 +2030,76 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bc948b10-f761-489f-ad75-e827d7db3f45",
+   "cell_type": "markdown",
+   "id": "97d149a2-de8f-44f7-ab27-c5e548734834",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "contact = {} #저장소 역할 #초기화, 초기값 설정 (list, dict,문자열만들기)\n",
+    "\n",
+    "while True: #프로그램 시작시 help 출력\n",
+    "    help = '''\n",
+    "======================Tel.exe==========================\n",
+    "F1: add phone number\n",
+    "F2: show up list\n",
+    "F3: search\n",
+    "F4: modify\n",
+    "F5: delete\n",
+    "F9: exit\n",
+    "======================Tel.exe==========================\n",
+    "    print('------------전화번호부 프로그램------------')\n",
+    "    print('1. 추가   2. 조회    3. 검색   4.수정   5. 삭제   9. 종료')\n",
+    "    menu = int(input('Click the menu.(num only) : '))\n",
+    "\n",
+    "    if menu == 1: #연락처 추가\n",
+    "        #추가할 이름(딕셔너리의 key값)입력하기\n",
+    "        print('add num')\n",
+    "        new_name = input('name : ')\n",
+    "        new_tel = input('tel : ')\n",
+    "        print(new_name, new_tel)\n",
+    "        \n",
+    "        #contact = [new_name] = new_tel\n",
+    "        contact.setdefault(new_name, new_tel)\n",
+    "\n",
+    "    elif menu == 2: #연락처 보기\n",
+    "        print('list up')\n",
+    "        #print(contact)\n",
+    "        for name, tel in contact.items(): \n",
+    "            print(name, ':', tel)\n",
+    "\n",
+    "    elif menu == 3: #연락처 검색\n",
+    "        print('search')\n",
+    "        serch_name = input('search name: ')\n",
+    "        #print(contact[search_name])\n",
+    "        print(contact.get(search_name, 'NO name.'))\n",
+    "\n",
+    "    elif menu == 4: #연락처 수정\n",
+    "        print('revise')\n",
+    "        mod_name = input('rename : ')\n",
+    "\n",
+    "        if mod_name in contact:\n",
+    "            mod_tel = input('new num: ')\n",
+    "            contact[mod_name] = mod_tel\n",
+    "        else:\n",
+    "            print('no name here!')\n",
+    "\n",
+    "        # 수정이름이 없어를 처음부터 알려줘라!\n",
+    "    \n",
+    "    elif menu == 5: #연락처 삭제\n",
+    "        print('delete')\n",
+    "        del_name = input('delete name : ')\n",
+    "\n",
+    "        if del_name in contact:\n",
+    "            del contact[del_name]\n",
+    "        else:\n",
+    "            print('no name here!')\n",
+    "\n",
+    "    elif menu == 9: #프로그램 종료\n",
+    "        print('exit')\n",
+    "        break\n",
+    "    \n",
+    "    else : \n",
+    "        print('WORNG!!!')"
+   ]
   },
   {
    "cell_type": "code",
