--- a/01-1.Python_sample test zip/04_Function__IO_Practice.ipynb
+++ b/01-1.Python_sample test zip/04_Function__IO_Practice.ipynb
@@ -17,11 +17,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "2885abd5",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def is_odd(number):\n",
+    "    if number %2 == 1:    # 2로 나누었을 때 나머지가 1이면 홀수이다.\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "62aec7dc-7c2d-4589-894b-7c4e719a149e",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "is_odd(4)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -293,11 +320,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "24d1a1d8",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdin",
+     "output_type": "stream",
+     "text": [
+      "저장할 내용을 입력하세요:  0918 practice done\n"
+     ]
+    }
+   ],
+   "source": [
+    "user_input = input(\"저장할 내용을 입력하세요: \")\n",
+    "f = open('test.txt', 'a')  # 내용을 추가하기 위해 'a'를 사용\n",
+    "f.write(user_input)\n",
+    "f.write('\\n')  # 줄 바꿈 문자 삽입\n",
+    "f.close()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -325,11 +366,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "9344f6ca",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "f = open('test.txt', 'r')\n",
+    "body = f.read()  # test.txt 파일의 내용을 body 변수에 저장\n",
+    "f.close()\n",
+    "\n",
+    "body = body.replace(\"java\", \"python\")  # body 문자열에서 \"java\"를 \"python\"으로 변경\n",
+    "\n",
+    "f = open('test.txt', 'w')  # 파일을 쓰기 모드로 다시 실행\n",
+    "f.write(body)\n",
+    "f.close()"
+   ]
   },
   {
    "cell_type": "markdown",
