--- a/01_Python_Grammar/1009-10 Numpy_Review.ipynb
+++ b/01_Python_Grammar/1009-10 Numpy_Review.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "7b502424-b3f7-476f-bc48-ee893517b4fa",
    "metadata": {},
    "outputs": [],
@@ -719,56 +719,743 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "4b49b82a-620c-4177-95dc-ac8792ee30c0",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 8  2  6  3]\n",
+      " [12  2  5 13]\n",
+      " [ 7  6 11  1]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2차원 배열의 정렬\n",
+    "arr = np.random.randint(15, size =(3,4))\n",
+    "print(arr)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "c21ac52c-86cb-4266-adab-ec83bb313196",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 7  2  5  1]\n",
+      " [ 8  2  6  3]\n",
+      " [12  6 11 13]]\n",
+      "[ 1  2  2  3  5  6  6  7  8 11 12 13]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(np.sort(arr, axis=0)) #1열부터 오름차순 정렬\n",
+    "print(np.sort(arr, axis=None))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "5faf3033-65ec-404c-8c95-4b16b85552fe",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  3  6  8]\n",
+      " [ 2  5 12 13]\n",
+      " [ 1  6  7 11]]\n",
+      "[[1 3 2 0]\n",
+      " [1 2 0 3]\n",
+      " [3 1 0 2]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# argsort() 원소가 정렬되었을 때 정렬된 원소에 원래 배열에서 인덱스를 반환하게 됨.\n",
+    "print(np.sort(arr, axis=1))\n",
+    "print(np.argsort(arr, axis=1))"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "3d0a3e37-5881-4533-9111-a71ed215b404",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11] 1\n",
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]] 2\n",
+      "[[[ 0  1]\n",
+      "  [ 2  3]\n",
+      "  [ 4  5]]\n",
+      "\n",
+      " [[ 6  7]\n",
+      "  [ 8  9]\n",
+      "  [10 11]]] 3\n",
+      "[[[[ 0  1  2]]\n",
+      "\n",
+      "  [[ 3  4  5]]]\n",
+      "\n",
+      "\n",
+      " [[[ 6  7  8]]\n",
+      "\n",
+      "  [[ 9 10 11]]]] 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 배열의 형태 변경\n",
+    "# reshape()\n",
+    "arr = np.arange(12)\n",
+    "print(arr, arr.ndim)\n",
+    "\n",
+    "arr = arr.reshape(3,4)\n",
+    "print(arr, arr.ndim)\n",
+    "\n",
+    "arr = arr.reshape((2,3,2)) #2x3의 2 tensor로 출력\n",
+    "print(arr, arr.ndim)\n",
+    "\n",
+    "arr = arr.reshape((2,2,1,3))\n",
+    "print(arr, arr.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "59e6c66a-0f64-4cd6-bbac-bdcd6c234d8e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#resize()\n",
+    "# ravel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a4578a2d-7b80-41d2-8b41-e738a5adacf1",
+   "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "43013ea9-997a-4387-a290-c8b83f7697ae",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0  1  2  3  4  5  6  7  8  9 10 11]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.arange(12)\n",
+    "print(arr)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "de39d0b3-a46c-4331-bf51-5ba1144af066",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr.resize(3,4)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "38b294e5-8b16-4f19-b3fd-e22aaeb66985",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0  1  2  3]\n",
+      " [ 4  5  6  7]\n",
+      " [ 8  9 10 11]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr.ravel()\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "id": "70f47af7-2d1c-4081-8f23-cedb45308364",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2  3  4  5  6  7  8  9 10 11 12]\n",
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.arange(1, 13)\n",
+    "print(arr)\n",
+    "\n",
+    "arr = arr.reshape(3, -1)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "123174aa-fe0c-4ec0-adac-6d358c342911",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1 2] (2,)\n",
+      "[[1 2]] (1, 2)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# expand_dims() 입력한 axis값을 기준으로 차원을 생성함\n",
+    "arr = np.array([1,2])\n",
+    "print(arr, arr.shape)\n",
+    "\n",
+    "arr = np.expand_dims(arr, axis=0)\n",
+    "print(arr, arr.shape)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "5544f983-da95-43c5-a445-6bd916aaf74f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]] (1, 2) 2\n",
+      "[1 2] (2,) 1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# squeeze() 차원 줄임. \n",
+    "\n",
+    "arr = np.array([[1,2]])\n",
+    "print(arr, arr.shape, arr.ndim)\n",
+    "arr = np.squeeze(arr, axis=0)\n",
+    "print(arr, arr.shape, arr.ndim)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "a5d21363-4540-4c00-a933-6f18fc43dd66",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 3]\n",
+      " [2 4]]\n",
+      "[[1 3]\n",
+      " [2 4]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 전치행렬\n",
+    "arr = np.array([[1,2],\n",
+    "                [3,4]])\n",
+    "print(arr.T)\n",
+    "\n",
+    "arr2 = np.full((3,2),2)\n",
+    "print(arr.T)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "b3f70bbb-2a83-458f-a057-70c7c08252df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[1, 2, 50, 3, 4, 5, 6]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 배열에 원소 추가 및 삭제\n",
+    "# python list\n",
+    "arr = [1,2,3,4,5,6]\n",
+    "arr.insert(2,50)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "id": "931c7804-2fb7-4bf9-bbb0-f9314a63ef6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 1  2 50  3  4  5  6  7  8]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 1차원 배열에서의 insert\n",
+    "arr =np.arange(1,9)\n",
+    "arr = np.insert(arr, 2,50)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "5c24c290-fbb8-4602-a823-4a33adc8fa75",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [50 50 50 50]\n",
+      " [ 9 10 11 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 2차원 insert\n",
+    "arr = np.arange(1,13).reshape(3,4)\n",
+    "arr = np.insert(arr, 2,50, axis=0)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "id": "69c4726f-0f5e-47a9-9bfa-0ac48ede05ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n",
+      "[[1 2 3 4]\n",
+      " [5 6 7 8]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# delete\n",
+    "arr = np.arange(1,13).reshape(3,4)\n",
+    "print(arr)\n",
+    "\n",
+    "arr = np.delete(arr,2,axis=0)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "21f3297a-9522-4601-bd1a-9650ee1e2690",
+   "metadata": {},
+   "source": [
+    "### 배열간의 병합 = 합치는 것"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 79,
+   "id": "1312ce59-8fda-41ff-91bb-9356017e3248",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n",
+      "[[13 14 15 16]\n",
+      " [17 18 19 20]\n",
+      " [21 22 23 24]]\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# append()\n",
+    "# axis=1 y축을 기준으로, axis=0 x축을 기준으로\n",
+    "arr1 = np.arange(1,13).reshape(3,4)\n",
+    "arr2 = np.arange(13,25).reshape(3,4)\n",
+    "\n",
+    "print(arr1)\n",
+    "print(arr2, end=\"\\n\\n\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e7948c88-437e-41b7-8320-585e614df081",
+   "metadata": {},
+   "source": [
+    "### vstack(), hstack()\n",
+    "* vstack()은 axis=0을 기준으로\n",
+    "* hstack()은 axis=1을 기준으로"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "ea9abf85-9eb7-471c-a3b0-3a92f5ccf5ab",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[[ 7  8  9]\n",
+      " [10 11 12]]\n",
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]]\n",
+      "[[ 1  2  3  7  8  9]\n",
+      " [ 4  5  6 10 11 12]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr1 = np.arange(1,7).reshape(2,3)\n",
+    "arr2 = np.arange(7,13).reshape(2,3)\n",
+    "\n",
+    "print(arr1)\n",
+    "print(arr2)\n",
+    "\n",
+    "arr3 = np.vstack((arr1, arr2))\n",
+    "print(arr3)\n",
+    "\n",
+    "arr4 = np.hstack((arr1, arr2))\n",
+    "print(arr4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 90,
+   "id": "d8c3193c-101d-431b-ac97-dd93c30cd07a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3  4]\n",
+      " [ 5  6  7  8]\n",
+      " [ 9 10 11 12]]\n",
+      "[array([[1, 2, 3, 4]]), array([[5, 6, 7, 8]]), array([[ 9, 10, 11, 12]])]\n",
+      "[array([[ 1,  2],\n",
+      "       [ 5,  6],\n",
+      "       [ 9, 10]]), array([[ 3,  4],\n",
+      "       [ 7,  8],\n",
+      "       [11, 12]])]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 배열 분할: axis를 기준으로 분할하는 것.\n",
+    "\n",
+    "arr = np.arange(1,13).reshape(3,4)\n",
+    "print(arr)\n",
+    "\n",
+    "#vsplit() => axis=0\n",
+    "arr_vsplit = np.vsplit(arr,3)\n",
+    "print(arr_vsplit)\n",
+    "\n",
+    "#hsplit() => axis=1\n",
+    "arr_hsplit = np.hsplit(arr,2)\n",
+    "print(arr_hsplit)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "f93a3fa2-32e1-4dac-bb37-8fbe5043e72a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[9 8 8 3 8 8 3 0]\n",
+      "  [4 2 8 7 7 5 1 7]\n",
+      "  [0 6 3 5 0 2 2 6]\n",
+      "  [8 4 7 7 9 4 0 4]\n",
+      "  [3 3 4 3 9 0 1 2]\n",
+      "  [7 5 8 6 9 4 0 0]]\n",
+      "\n",
+      " [[0 0 9 0 8 3 6 3]\n",
+      "  [3 4 2 6 8 3 7 9]\n",
+      "  [9 7 3 0 1 6 3 4]\n",
+      "  [5 2 1 6 4 7 4 1]\n",
+      "  [1 5 7 2 1 9 7 3]\n",
+      "  [8 0 4 4 3 9 8 2]]\n",
+      "\n",
+      " [[5 7 3 3 1 2 7 5]\n",
+      "  [7 5 6 5 5 9 1 7]\n",
+      "  [3 4 2 8 0 3 3 7]\n",
+      "  [1 0 7 1 0 1 8 7]\n",
+      "  [3 8 0 8 7 6 8 4]\n",
+      "  [4 4 0 4 9 9 7 5]]\n",
+      "\n",
+      " [[4 5 3 4 2 3 9 7]\n",
+      "  [1 4 5 6 0 3 4 9]\n",
+      "  [4 7 1 3 6 5 0 6]\n",
+      "  [8 6 8 5 6 2 2 7]\n",
+      "  [4 6 7 8 8 2 1 7]\n",
+      "  [3 3 2 7 3 7 9 8]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 3차원 배열 분할 \n",
+    "arr = np.random.randint(0,10,(4,6,8))\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "f214808f-f684-49ec-ba8a-9be21d4d7ce8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[[3 3 3 3 3]\n",
+      "  [3 3 3 3 3]\n",
+      "  [3 3 3 3 3]\n",
+      "  [3 3 3 3 3]]\n",
+      "\n",
+      " [[3 3 3 3 3]\n",
+      "  [3 3 3 3 3]\n",
+      "  [3 3 3 3 3]\n",
+      "  [3 3 3 3 3]]\n",
+      "\n",
+      " [[3 3 3 3 3]\n",
+      "  [3 3 3 3 3]\n",
+      "  [3 3 3 3 3]\n",
+      "  [3 3 3 3 3]]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.full((3,4,5),3)\n",
+    "print(arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "7cc08302-a4b5-4a40-beab-46b84f57c1aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 10  39  42  28 -38]\n",
+      " [ 43  -5 -38  -9 -39]\n",
+      " [ 13   4 -36 -21   9]\n",
+      " [  9  30 -25 -41 -25]]\n",
+      "[[  9  -5 -38 -41 -39]\n",
+      " [ 10   4 -36 -21 -38]\n",
+      " [ 13  30 -25  -9 -25]\n",
+      " [ 43  39  42  28   9]]\n",
+      "[-41 -39 -38 -38 -36 -25 -25 -21  -9  -5   4   9   9  10  13  28  30  39\n",
+      "  42  43]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.random.randint(-50, 50,(4,5))\n",
+    "print(arr)\n",
+    "\n",
+    "print(np.sort(arr,axis=0))\n",
+    "\n",
+    "print(np.sort(arr, axis=None))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "id": "5730b823-fd4a-412d-9d88-71335ecc32f9",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for -: 'list' and 'int'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[117], line 3\u001b[0m\n\u001b[0;32m      1\u001b[0m py_list \u001b[38;5;241m=\u001b[39m [\n\u001b[0;32m      2\u001b[0m     np\u001b[38;5;241m.\u001b[39mfull(\u001b[38;5;241m3\u001b[39m,\u001b[38;5;241m8\u001b[39m),\n\u001b[1;32m----> 3\u001b[0m     np\u001b[38;5;241m.\u001b[39marange([\u001b[38;5;241m33\u001b[39m,\u001b[38;5;241m-\u001b[39m\u001b[38;5;241m15\u001b[39m,\u001b[38;5;241m26\u001b[39m]),\n\u001b[0;32m      4\u001b[0m     np\u001b[38;5;241m.\u001b[39mlinspace(\u001b[38;5;241m17\u001b[39m,\u001b[38;5;241m26\u001b[39m,\u001b[38;5;241m3\u001b[39m)\n\u001b[0;32m      5\u001b[0m ]\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m#mean\u001b[39;00m\n\u001b[0;32m      7\u001b[0m result_arr \u001b[38;5;241m=\u001b[39m[] \u001b[38;5;66;03m#비어있는 리스트 생성\u001b[39;00m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for -: 'list' and 'int'"
+     ]
+    }
+   ],
+   "source": [
+    "py_list = [\n",
+    "    np.full(3,8),\n",
+    "    np.arange([33,-15,26]),\n",
+    "    np.linspace(17,26,3)\n",
+    "]\n",
+    "#mean\n",
+    "result_arr =[] #비어있는 리스트 생성\n",
+    "for i in py_list:\n",
+    "    result_arr.append(np.mean(i))\n",
+    "    result_arr.append(np.std(i))\n",
+    "    result_arr.append(np.median(i))\n",
+    "\n",
+    "print(result_arr)\n",
+    "#\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "id": "eceaf4c1-127a-4c02-9eb6-0df2230cceea",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 2  4  6]\n",
+      " [ 8 10 12]\n",
+      " [14 16 18]]\n",
+      "[array([[2, 4, 6]]), array([[ 8, 10, 12]]), array([[14, 16, 18]])]\n",
+      "[[[  4  16  36]]\n",
+      "\n",
+      " [[ 64 100 144]]\n",
+      "\n",
+      " [[196 256 324]]]\n",
+      "[[  4  16  36]\n",
+      " [ 64 100 144]\n",
+      " [196 256 324]]\n",
+      "[[  2   4   6]\n",
+      " [  8  10  12]\n",
+      " [ 14  16  18]\n",
+      " [  4  16  36]\n",
+      " [ 64 100 144]\n",
+      " [196 256 324]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.arange(2,20,2).reshape((3,3))\n",
+    "print(arr)\n",
+    "#행 기준으로 3개의 배열로 분할\n",
+    "s1 = np.vsplit(arr, 3)\n",
+    "print(s1)\n",
+    "\n",
+    "s2 = np.square(s1)\n",
+    "print(s2)\n",
+    "\n",
+    "s3 = np.squeeze(s2, axis=1)\n",
+    "print(s3)\n",
+    "\n",
+    "result_arr = np.vstack((arr, s3))\n",
+    "print(result_arr)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 135,
+   "id": "216be25b-d188-4ce8-b8e9-9850adedd7de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[ 0 30 60 90]\n",
+      "[ 0 30 60 90]\n",
+      "[0.         0.52359878 1.04719755 1.57079633]\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr = np.array([0, 30, 60, 90])\n",
+    "print(arr)\n",
+    "arr = np.arange(0, 91, 30)\n",
+    "print(arr)\n",
+    "\n",
+    "lst = []\n",
+    "lst.append(np.sin(arr*np.pi / 180)\n",
+    "\n",
+    "arr1 = np.radians(arr)\n",
+    "print(arr1)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "38b294e5-8b16-4f19-b3fd-e22aaeb66985",
+   "id": "6f365c92-48b8-44f8-bd7b-2aa4400f10b6",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -776,7 +1463,15 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "70f47af7-2d1c-4081-8f23-cedb45308364",
+   "id": "63c0d68c-6e0b-46c6-afd3-8bd5e2830c49",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5250c49e-b763-40d9-9a8f-90198a83916c",
    "metadata": {},
    "outputs": [],
    "source": []
